--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  
+ 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -19,8 +21,11 @@
   },
   "homepage": "https://github.com/karsten868/SWEII-Engagement-App#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "firebase": "^9.6.1",
+    "nodemon": "^2.0.15",
+    "vue-router": "^3.5.3"
   }
 }
